assets/css/styles.css
/* ... */
.qualification__icon{
    font-size: 1.8rem;
    margin-right: var(--mb-0-25);
}

.qualification__data{
    display: grid;
    grid-template-columns: 1fr max-content 1fr;
    column-gap: 1.5rem;
}

.qualification__title{
    font-size: var(--normal-font-size);
    font-weight: var(--font-medium);
}

.qualification__subtitle{
    display: inline-block;
    font-size: var(--small-font-size);
    margin-bottom: var(--mb-1);
}

.qualification__calendar{
    font-size: var(--smaller-font-size);
    color: var(--text-color-light);
}

.qualification__rounder{
    display: inline-block;
    width: 13px;
    height: 13px;
    background-color: var(--first-color);
    border-radius: 50%;
}

.qualification__line{
    display: block;
    width: 1px;
    height: 100%;
    background-color: var(--first-color);
    transform: translate(6px, -7px);
}

.qualification [data-content]{
    display: none;
}

.qualification__active[data-content]{
    display: block;
}

.qualification__button.qualification__active{
    color: var(--first-color);
}

.qualification__tech{
    border-bottom: 3px solid var(--first-color-alt);
    border-radius: .2rem;
}
/*==================== SERVICES ====================*/
.services__container{
    gap: 1.5rem;
    grid-template-columns: repeat(2, 1fr);
}

.services__content{
    position: relative;
    background-color: var(--container-color);
    padding: 1.25rem .5rem 1.25rem 1.5rem;
    border-radius: .25rem;
    box-shadow: 0 2px 4px rgba(0,0,0,.15);
    transition: .3s;
}

.services__content:hover{
    box-shadow: 0 4px 8px rgba(0,0,0,.15);
}

.services__icon{
    display: block;
    font-size: 1.5rem;
    color: var(--first-color);
    margin-bottom: var(--mb-1);
}

.services__title{
    font-size: var(--h3-font-size);
    margin-bottom: var(--mb-1);
    font-weight: var(--font-medium);
}

.services__button{
    cursor: pointer;
    font-size: var(--small-font-size);
}

.services__button:hover .button__icon{
    transform: translateX(.25rem);
}

.services__modal{
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,.5);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 1rem;
    z-index: var(--z-modal);
    opacity: 0;
    visibility: hidden;
    transition: .3s;
}

.services__modal-content{
    position: relative;
    background-color: var(--container-color);
    padding: 1.5rem;
    border-radius: .5rem;
}

.services__modal-service{
    row-gap: 1rem;
}

.services__modal-service{
    display: flex;
}

.services__modal-title{
    font-size: var(--h3-font-size);
    font-weight: var(--font-medium);
    margin-bottom: var(--mb-1-5);
}

.services__modal-close{
    position: absolute;
    top: 1rem;
    right: 1rem;
    font-size: 1.5rem;
    color: var(--first-color);
    cursor: pointer;
}
.services__modal-icon{
    color: var(--first-color);
    margin-right: var(--mb-0-25);
}

/* Active Modal */
.active-modal{
    opacity: 1;
    visibility: visible;
}

/*==================== PORTFOLIO ====================*/
.portfolio__container{
    overflow: initial;
}

.portfolio__content{
    padding: 0 1.5rem;
}

.portfolio__img{
    width: 265px;
    border-radius: .5rem;
    justify-self: center;
}

.portfolio__title{
    font-size: var(--h3-font-size);
    margin-bottom: var(--mb-0-5);
}

.portfolio__description{
    margin-bottom: var(--mb-0-75);
}

.portfolio__button:hover .button__icon{
    transform: translateX(.25rem);
}

.swiper-button-prev::after,
.swiper-button-next::after{
    content: "";
}

.swiper-portfolio-icon{
    font-size: 2rem;
    color: var(--first-color);
}

.swiper-button-prev{
    left: -.5rem;
}

.swiper-button-next{
    right: -.5rem;
}

.swiper-container-horizontal > .swiper-pagination-bullets{
    bottom: -2.5rem;
}

.swiper-pagination-bullet-active{
    background-color: var(--first-color);
}

.swiper-button-prev,
.swiper-button-next,
.swiper-pagination-bullet{
    outline: none;
}

/*==================== PROJECT IN MIND ====================*/
.project{
    text-align: center;
}

.project__bg{
    background-color: var(--first-color-second);
    padding-top: 3rem;
}

.project__title{
    font-size: var(--h2-font-size);
    margin-bottom: var(--mb-0-75);
}

.project__description{
    margin-bottom: var(--mb-1-5);
}

.project__title,
.project__description{
    color: #FFF;
}

.project__img{
    width: 232px;
    justify-self: center;
}

/*==================== TESTIMONIAL ====================*/
/* will be added later if needed */

/*==================== CONTACT ME ====================*/
.contact__section{
    padding: 2rem 0 2rem;
}

.contact__container{
    row-gap: 3rem;
}

.contact__information{
    display: flex;
    margin-bottom: var(--mb-2);
}

.contact__icon{
    font-size: 2rem;
    color: var(--first-color);
    margin-right: var(--mb-0-75);
}

.contact__title{
    font-size: var(--h3-font-size);
    font-weight: var(--font-medium);
}

.contact__subtitle{
    font-size: var(--small-font-size);
    color: var(--text-color-light);
}

.contact__content{
    background-color: var(--input-color);
    border-radius: .5rem;
    padding: .75rem 1rem .25rem;
}

.contact__label{
    font-size: var(--smaller-font-size);
    color: var(--title-color);
}

.contact__input{
    width: 100%;
    background-color: var(--input-color);
    color: var(--text-color);
    font-family: var(--body-font);
    font-size: var(--normal-font-size);
    border: none;
    outline: none;
    padding: .25rem .5rem .5rem 0;
}
/*==================== FOOTER ====================*/
.footer{
    padding-top: 2rem;
}

.footer__container{
    row-gap: 3.5rem;
}

.footer__bg{
    background-color: var(--first-color-second);
    padding: 2rem 0 3rem;
}

.footer__title{
    font-size: var(--h1-font-size);
    margin-bottom: var(--mb-0-25);
}

.footer__subtitle{
    font-size: var(--small-font-size);
}
.footer__links{
    display: flex;
    flex-direction: column;
    row-gap: 1.5rem;
}
/* ... */

